Extract and return upgrade from change log
