# docs/swagger.json
@@ -5156,208 +5156,6 @@
                 }
             }
         },
-        "/Upgrade/{upgrade}": {
-            "get": {
-                "tags": [
-                    "Upgrades"
-                ],
-                "operationId": "Upgrade",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "upgrade number",
-                        "name": "upgrade",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/Response"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "result": {
-                                            "$ref": "#/definitions/Upgrade"
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    },
-                    "400": {
-                        "description": "Bad request"
-                    },
-                    "429": {
-                        "description": "Request number limit exceeded"
-                    },
-                    "500": {
-                        "description": "Internal server error"
-                    },
-                    "503": {
-                        "description": "Service unavailable"
-                    }
-                }
-            }
-        },
-        "/Upgrade/{upgrade}/VotingHistory": {
-            "get": {
-                "tags": [
-                    "Upgrades"
-                ],
-                "operationId": "UpgradeVotingHistory",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "upgrade number",
-                        "name": "upgrade",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/Response"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "result": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/UpgradeVotingHistoryItem"
-                                            }
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    },
-                    "400": {
-                        "description": "Bad request"
-                    },
-                    "429": {
-                        "description": "Request number limit exceeded"
-                    },
-                    "500": {
-                        "description": "Internal server error"
-                    },
-                    "503": {
-                        "description": "Service unavailable"
-                    }
-                }
-            }
-        },
-        "/UpgradeVoting": {
-            "get": {
-                "tags": [
-                    "Upgrades"
-                ],
-                "operationId": "UpgradeVoting",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/Response"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "result": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/UpgradeVotes"
-                                            }
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    },
-                    "400": {
-                        "description": "Bad request"
-                    },
-                    "429": {
-                        "description": "Request number limit exceeded"
-                    },
-                    "500": {
-                        "description": "Internal server error"
-                    },
-                    "503": {
-                        "description": "Service unavailable"
-                    }
-                }
-            }
-        },
-        "/UpgradeVotings": {
-            "get": {
-                "tags": [
-                    "Upgrades"
-                ],
-                "operationId": "UpgradeVotings",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "items to take",
-                        "name": "limit",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "continuation token to get next page items",
-                        "name": "continuationToken",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/ResponsePage"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "result": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/Upgrade"
-                                            }
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    },
-                    "400": {
-                        "description": "Bad request"
-                    },
-                    "429": {
-                        "description": "Request number limit exceeded"
-                    },
-                    "500": {
-                        "description": "Internal server error"
-                    },
-                    "503": {
-                        "description": "Service unavailable"
-                    }
-                }
-            }
-        },
         "/Upgrades": {
             "get": {
                 "tags": [
@@ -7027,45 +6825,6 @@
                 },
                 "success": {
                     "type": "boolean"
-                }
-            }
-        },
-        "Upgrade": {
-            "type": "object",
-            "properties": {
-                "endActivationDate": {
-                    "type": "string",
-                    "example": "2020-01-01T00:00:00Z"
-                },
-                "startActivationDate": {
-                    "type": "string",
-                    "example": "2020-01-01T00:00:00Z"
-                },
-                "upgrade": {
-                    "type": "integer"
-                }
-            }
-        },
-        "UpgradeVotes": {
-            "type": "object",
-            "properties": {
-                "upgrade": {
-                    "type": "integer"
-                },
-                "votes": {
-                    "type": "integer"
-                }
-            }
-        },
-        "UpgradeVotingHistoryItem": {
-            "type": "object",
-            "properties": {
-                "timestamp": {
-                    "type": "string",
-                    "example": "2020-01-01T00:00:00Z"
-                },
-                "votes": {
-                    "type": "integer"
                 }
             }
         },
